--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: macos-latest
 
     steps:
+      - run: service docker start
       - name: Checkout repository
         uses: actions/checkout@v3
 
