--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - RUN: bash free_disk_space.sh
+
       - name: Checkout repository
         uses: actions/checkout@v3
 
